implicitly on demand, e.g. for "isabelle scala" or "isabelle jedit".

* Command-line tool "isabelle scala_project" is has been improved in
various ways:
  - sources from all components with etc/build.props are included,
  - sources of for the jEdit text editor and the Isabelle/jEdit
    plugins (jedit_base and jedit_main) are included by default,
  - more sources may be given on the command-line,
  - options -f and -D make the tool more convenient.

* Remote provers from SystemOnTPTP (notably for Sledgehammer) are now
managed via Isabelle/Scala instead of perl; the dependency on
libwww-perl has been eliminated (notably on Linux). Rare
INCOMPATIBILITY: HTTP proxy configuration now works via JVM properties
https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/net/doc-files/net-properties.html

* System option "system_log" specifies an optional log file for internal
messages produced by Output.system_message in Isabelle/ML; the value
"true" refers to console progress of the build job. This works for
"isabelle build" or any derivative of it.

* System options of type string may be set to "true" using the short
notation of type bool. E.g. "isabelle build -o system_log".

* System option "document=true" is an alias for "document=pdf" and thus
can be used in the short form. E.g. "isabelle build -o document".

* Command-line tool "isabelle version" supports repository archives
(without full .hg directory). It also provides more options.

* Obsolete settings variable ISABELLE_PLATFORM32 has been discontinued.
Note that only Windows supports old 32 bit executables, via settings
variable ISABELLE_WINDOWS_PLATFORM32. Everything else should be
ISABELLE_PLATFORM64 (generic Posix) or ISABELLE_WINDOWS_PLATFORM64
(native Windows) or ISABELLE_APPLE_PLATFORM64 (Apple Silicon).

* Timeouts for Isabelle/ML tools are subject to system option
"timeout_scale" --- this already used for the overall session build